fix(style): improve legibility of combat team names

--- a/less/combat.less
+++ b/less/combat.less
@@ -1,4 +1,8 @@
 .combat-sidebar {
+    .folder-header h3 {
+        text-shadow: 1px 1px 1px var(--color-shadow-dark);
+    }
+
     li.combatant {
         &.active {
             border-color: transparent;
